# invoice-agent-benchmark

./: .gitignore  RAPORT.md  README.md
adk-go/: .gitignore  README.md  agent.go  go.mod  go.sum
adk-go/src/application/factories/: agent_factory.go
adk-go/src/application/tools/: calculators,.go  formatters.go  validators.go
adk-go/src/domain/: config.go  constants.go
adk-go/src/infrastructure/: evaluation.go  metrics_service.go
adk-go/src/interfaces/: cli_runner.go
adk-python/: README.md  agent.py  pyproject.toml
adk-python/src/application/factories/: agent_factory.py
adk-python/src/application/tools/: calculators.py  formatters.py
adk-python/src/domain/: config.py  constants.py
adk-python/src/infrastructure/: evaluation.py  metrics_service.py
adk-python/src/interfaces/: cli_runner.py
adk-typescript/: README.md  agent.ts  package.json  tsconfig.json
adk-typescript/src/application/factories/: agent_factory.ts
adk-typescript/src/application/tools/: calculators.ts  formatters.ts  validators.ts
adk-typescript/src/domain/: config.ts  constants.ts
adk-typescript/src/infrastructure/: evaluation.ts  metrics_service.ts
adk-typescript/src/interfaces/: cli_runner.ts
baseline/: README.md  agent.py  pyproject.toml
baseline/src/application/tools/: calculators.py  (+3 more)
baseline/src/domain/: config.py  constants.py
baseline/src/infrastructure/: metrics_service.py
baseline/src/interfaces/: cli_runner.py
koog-kotlin/untitled/: build.gradle.kts  gradle.properties  settings.gradle.kts
results/raw/: adk-go_ollama_chat-glm-4.6:cloud_1777898325.json
(+17 files in other folders)
