[project]
name = "invoice-agent-benchmark"
version = "0.1.0"
readme = "README.md"
description = "Agent do wypełniania faktur VAT (Benchmark)"
requires-python = ">=3.10"

dependencies = [
    "google-adk",
    "google-genai",
    "psutil",
    "pandas",
    "matplotlib",
]

[tool.uv]
python-version = "3.10"